update to  introduction, q1 (problem to solve)

--- a/csci5541-project-template-main/csci5541_webtemplate/index.html
+++ b/csci5541-project-template-main/csci5541_webtemplate/index.html
@@ -136,7 +136,15 @@
 <b>What did you try to do? What problem did you try to solve? Articulate your objectives using absolutely no jargon.</b>
 </p>
 <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+We wanted to come up with a way to better utilize and analyze student feedback. NLP in educational contexts is seriously lacking.
+Based on a lot of the initial research that we did, we realized that this was a field where there wasn't a lot being done. We wanted to focus on
+increasing student engagement in classes because this is a topic where NLP can be really useful, but it's not really being explored.
+Initially, we were thinking of focusing on online learning, but realized that this required using visualization techniques and not NLP techniques.
+This is why we decided to use actual student feedback data and implement a sentiment analysis instead. This way, we could really analyze how
+students were feeling in a class and what was working or not working in that class. There's also a lot of data for this topic, we can look at RateMyProfessor
+and the UMN SRS data, but it felt like the data wasn't being effectively used. The overall objective is to provide actionable feedback to professors
+to help them improve their courses or teaching style. We want to go a little bit beyond just doing the sentiment analysis. We want to use the sentiment
+analysis to create a statement/paragraph and identify key points where professors can improve.
 </p>
 
 <p>
