finished intro and some of approach for midterm OH

--- a/csci5541-project-template-main/csci5541_webtemplate/index.html
+++ b/csci5541-project-template-main/csci5541_webtemplate/index.html
@@ -151,14 +151,25 @@ analysis to create a statement/paragraph and identify key points where professor
 <b>How is it done today, and what are the limits of current practice?</b>
 </p>
 <p>
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-<p>
-
+Based on many of the papers that we read when doing our initial research and literature review, this is not something that hasn't been attempted before, but we will be approaching the
+problem in a different way. One of the paper that we read implemented sentiment analysis, but used traditional machine learning algorithms instead of pre-trained models like BERT,
+which is what we are proposing for our project. Using traditional machine learning algorithms limits the capabilities of the model. Using specific sentiment analysis models will make
+the model much easier to finetune and improve. The BERT models will allow the model to understand the context of the review rather than analyze words literally. Current processes also rarely
+go beyond the actual sentiment analysis section of the project. They come up with graphs that present feedback very generally, but they don't seem to really dive into the potential
+use cases of the sentiment analysis for education. We want to take it a step further and talk to professors to understand how the tool could actually help them make
+more tangible impacts/changes in their teaching.
 <p>
 <b>Who cares? If you are successful, what difference will it make?</b>
 </p>
 <p>
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+If the project is successful, the biggest difference will be for educators. As we mentioned, the point of the project is not just to do the sentiment analysis, but to provide an actual
+tool that professors can use to improve their teaching. This comes in a variety of ways, using graphs, word clouds, and model-generated feedback which can condense the larger text into
+key points to analyze the main areas of improvement (or what a professor is doing well and should continue to do). Although we're starting with CS professors, we're hoping that this tool
+can be implemented throughout various departments. Right now, there are a lot of forms of professor feedback, including SRS data, RateMyProfessor, and even personal surveys that the professors
+themselves send out. The different platforms can be overwhelming. A single professor can have multiple classes with hundreds of students and understanding exactly what they can improve on can
+be difficult to identify. By implementing this sentiment analysis model, we're hoping to condense the data down so that the instructors receive actionable items rather than pages of text that
+may be difficult to sort through on their own. Really it's a tool that they can use. Since we'll be talking to instructors to understand what would be most useful to them, the tool will
+be curated for them specifically rather than be a general sentiment analysis model. 
 </p>
 
 <hr>
@@ -170,7 +181,7 @@ Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
 </p>
 
 <p>
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+IN PROGRESS.
 </p>
 
 <p>
@@ -178,7 +189,10 @@ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deseru
 </p>
 
 <p>
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+One problem that we anticipated is having access to data. One of the most helpful datasets here would be the SRS data that the University
+collects on professors. We weren't sure if professors would allow us to access this data (or if they were even allowed to due to University
+policy), or if professors would allow us to send out our own surveys to collect feedback data. Seeing as educational feedback comments
+are a core part of our project, it was really important that we somehow find or create the data that we needed.
 </p>
 
 <hr>
