minor grammar edit

--- a/csci5541-project-template-main/csci5541_webtemplate/index.html
+++ b/csci5541-project-template-main/csci5541_webtemplate/index.html
@@ -106,7 +106,7 @@
     <h2 id="abstract">Abstract</h2>
 
 <p>This project seeks to improve the analysis of student feedback in courses at the
-  University of Minnesota, focusing on popular COmputer Science classes to start. Teaching quality significantly impacts student learning and 
+  University of Minnesota, focusing on popular Computer Science classes to start. Teaching quality significantly impacts student learning and 
   by gathering data from surveys and augmenting it with sentiment-based public reviews, we aim to uncover actionable insights 
   through advanced NLP techniques. Using models like BERT, DistilBERT, and RoBERTa, we will perform sentiment analysis and 
   apply clustering techniques to capture common themes in the feedback given. Our goal is to identify critical factors beyond course content 
